--- a/css/styles.css
+++ b/css/styles.css
@@ -162,11 +162,11 @@ h3 {
 .grafico--camisas {
 
     grid-row: 2 / 3;
-    background-image: url(/FrontEndStore_inicio/img/grafico1.jpg);
+    background-image: url(./FrontEndStore_inicio/img/grafico1.jpg);
 }
 
 .grafico--node {
-    background-image: url(/FrontEndStore_inicio/img/grafico2.jpg);
+    background-image: url(./FrontEndStore_inicio/img/grafico2.jpg);
     grid-row: 8 /9;
 }
 
